--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-HTTP_HOST=localhost
+HTTP_HOST=0.0.0.0
 HTTP_PORT=8080
-DB_HOST=localhost
+DB_HOST=postgres
 DB_PORT=5432
 DB_USER=psql
 DB_PASSWORD=123
 DB_NAME=auto
 DB_SSLMODE=disable
+DEBUG=true
